vlib/v/checker/tests/import_mod_as_import_alias_duplicate_err.out
vlib/x/json2/decode.v:685:47: notice: unused parameter: `val`
  683 | }
  684 | 
  685 | fn (mut decoder Decoder) decode_string[T](mut val T) ! {
      |                                               ~~~
  686 |     string_info := decoder.current_node.value
  687 |
vlib/x/json2/decode.v:1049:43: notice: unused parameter: `val`
 1047 | // use pointer instead of mut so enum cast works
 1048 | @[unsafe]
 1049 | fn (mut decoder Decoder) decode_number[T](val &T) ! {
      |                                           ~~~
 1050 |     number_info := decoder.current_node.value
 1051 |     str := decoder.json[number_info.position..number_info.position + number_info.length]
vlib/v/checker/tests/import_mod_as_import_alias_duplicate_err.vv:2:8: error: A module `json` was already imported on line 1`.
    1 | import json
    2 | import x.json2 as json
      |        ~~~~~~~
    3 | 
    4 | numbers := {
